<resources>
    <string name="app_name">AppTest</string>
    <string name="action_add_note">Aggiungi Nota</string>
    <string name="text_add_note">Aggiungi una nota</string>
    <string name="text_activity_setting">Qui puoi impostare la tua configurazione</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_note">Add Note</string>
    <string name="title_activity_setting">Setting</string>
    <string name="hint_title_add_note">Dai un titolo alla tua nota</string>
    <string name="hint_description_add_note">Aggiungi una descrizione alla tua nota</string>
    <string name="button_add_note">Aggiungi Nota</string>
    <string name="button_edit_note">Modifica Nota</string>
    <string name="button_select_date">Seleziona Data</string>

    <string name="empty_note">Nessuna Nota Salvata</string>
    <string name="title_activity_edit_note">Modifica Nota</string>

    <string name="hello_world">Hello world!</string>
</resources>
