<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.webreattivo.apptest.AddNoteActivity">

    <TextView
        android:text="@string/text_add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/title_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title_add_note"/>

    <EditText
        android:id="@+id/description_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:hint="@string/hint_description_add_note"/>

    <Button android:id="@+id/saveNote"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_note"
        android:onClick="addNote"
        android:layout_marginTop="15dip"/>

</LinearLayout>
