<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.webreattivo.apptest.EditNoteActivity">

    <EditText
        android:id="@+id/title_edit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:hint="@string/hint_title_add_note"/>

    <EditText
        android:id="@+id/description_edit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:hint="@string/hint_description_add_note"/>

    <Button
        android:id="@+id/select_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dip"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:text="@string/button_select_date" />

    <TextView
        android:id="@+id/viewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/select_data"
        android:layout_marginTop="15dp"
        android:text="" />

    <Button android:id="@+id/saveNote"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_edit_note"
        android:onClick="updateNote"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:layout_marginTop="15dip"/>

</LinearLayout>
